@startuml
top to bottom direction
class LoginController {
    login(LoginForm loginForm)
    logout(???)
}
class LoginService{
    
    login(String mailAdderess , String password)
    
}
class LoginMapper{
    
    login(String mailAdderess , String password)
    
}
class SignUpController{
    signUp(SignUpForm signUpForm)
    
}
class SignUpService{
    signUp(User user)
}
class SignUpMapper{
    signUp(User user)
}
class SignUpForm{
    String mailAdderess
    String password
    String name
    Integer gender
    LocalDate dateOfBirth
    String remarks
}

class User{
    Long id
    String mailAdderess
    String password
    String name
    LocalDate dateOfBirth
    Integer gender
    String remarks
    List<kakeibo> kakeiboList
}
class LoginForm{
    String mailAdderess
    String password
}

class Board{
    Long id
    String name
    String description
    User user
    List<Post> postList
}

class Post{
    Long id
    String contents
    LocalDateTime insertAt
    LocalDateTime updateAt
    User user
    Board board
    List<Comment> commentList
}

class Comment{
    Long id
    String contents
    LocalDateTime insertAt
    LocalDateTime updateAt
    User user
    Board board
    Post post


}

class BoardController{
    getPostList(Long boardId)
}

class PostService{
    selectPostList(Long boardId)
}

class PostMapper{
    findPostList()
}

LoginController  ..>  LoginService 
LoginService  ..>  LoginMapper 
LoginController -- LoginForm
LoginController -- User
SignUpController  ..>  SignUpService 
SignUpService  ..>  SignUpMapper 
SignUpController -- SignUpForm
SignUpController -- User
BoardController ..> PostService
PostService ..> PostMapper
BoardController -- User
BoardController -- Board
BoardController -- Post
BoardController -- Comment
@enduml